# PowNet

./: .gitignore  .readthedocs.yaml  Appendix_abbreviations_units.xlsx  LICENSE  README.md  README.rst  main.py  pyproject.toml  reservoir.ilp  user_config.ini
.github/workflows/: joss_draft.yml  python-app.yml
Appendix/: transmission_parameters_sample_estimation.xlsx
Model/: PowNetDataSetup.py  PowNetModel.py  PowNetSolver.ipynb  data_camb_hydro_2016.csv
Model_withdata/: analysis_genmix_cost_emi.ipynb  analysis_srsv_nrsv.ipynb  analysis_transmission.ipynb  data_camb_genparams_deratef.csv  data_camb_hydro_2016.csv  data_camb_load_2016.csv  out_camb_R1_2016_hydro.csv  out_camb_R1_2016_hydro_import.csv  pownet_datasetup.py  pownet_model.py  pownet_solver.py
Model_withdata/input/: data_camb_genparams.csv  data_camb_genparams_deratef_2016.csv  data_camb_transparam.csv  (+1 more)
Output analysis/: analysis_genmix_cost_emi.ipynb  analysis_srsv_nrsv.ipynb  analysis_transmission.ipynb  data_camb_genparams.csv  out_camb_R1_2016_hydro.csv  out_camb_R1_2016_hydro_import.csv
database/: fuels.csv  transmission_params.csv
docs/: flow.pptx  requirements.txt
examples/: custom_workflow.ipynb  quickstart.ipynb  reservoir_reoperation.ipynb  reservoir_simulation.ipynb  rounding_heuristic.ipynb  synthetic_load.ipynb  synthetic_solar.ipynb
joss_submission/: paper.bib  paper.md
scripts/: benchmark_cycle_flow.py  benchmark_dw.py  check_model_infeasible.py  compare_kirchhoff.py  daily_hydro_dispatch.csv  fix_dw_experiments.py  functions.py  get_mps_dec.py  get_mps_dec2.py  get_mps_dec_by_unit.py  parse_dw_gurobi.py  plot_demand.py  prepare_paper01_dw.py  prepare_paper01_rounding.py  prepare_paper1.py  process_dw_results.py  process_pownet_inputs.py  process_transmission_data.py  run_bilat_cgh.py  run_bilat_fixed.py  run_dw_experiment.py  run_hydrochipps.py  run_pownet.py  run_quickstart.py  run_reop_exp.py  run_reservoir.py  run_trade_cgh.py  run_trade_exp_1.py  run_trade_experiment.py  run_trade_fixed.py  run_trade_surplus.py  solve_dw_pownet.py  solve_dw_rounding_pownet.py  solve_dw_single_instance.py  solve_gurobi.py  solve_gurobi_pownet.py  solve_gurobi_pownet_lp.py  solve_iterative_rounding.py  solve_model.py  solve_new_rounding_pownet.py  (+12 more)
src/: deprecated.py  dummy_model.mps  main.py  modeling.py  modeling3bin.py  process_data.py  process_result.py  scratch.py  scratch3bin.py  simulation.py  visualization.py  visualize.py  visualize_pownet.py
temp/: merra_2019.csv
user_inputs/: derate_factor.csv  fuel_map.csv  fuel_price.csv  renewable.csv  transmission.csv  unit_param.csv
(+353 files in other folders)
