[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cisl-pownet"
version = "2.0.0"
description = "A simple production cost model of framework for power systems"
readme = "README.md"
authors = [{ name = "Phumthep Bunnak", email = "pb585@cornell.edu" }]
keywords = ["power_system", "optimization", "production_cost_model"]
dependencies = [
    "gurobipy >= 11.0.3",
    "highspy >= 1.7.2",
    "matplotlib >= 3.7.1",
    "networkx >= 3.1.0",
    "numpy == 1.26.4",
    "pandas >= 2.1.1",
    "pmdarima >= 2.0.4",
    "scipy >= 1.11.3",
    "scikit-learn >= 1.5.2",
    "statsmodels >= 0.14.4",
    "geopandas >= 1.0.1",
    "contextily >= 1.6.2",
]
requires-python = ">=3.10"
