[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pownet = ["database/*.csv"]

[tool.coverage.run]
disable_warnings = ["no-data-collected"]
source = ["pownet"]

[project]
name = "pownet"
version = "2.3.0"
description = "A simple production cost model of framework for power systems"
readme = "README.md"
authors = [{ name = "Phumthep Bunnak", email = "pb585@cornell.edu" }]
license = { file = "LICENSE" }
keywords = ["power_system", "optimization", "production_cost_model", "unit_commitment"]
dependencies = [
    "gurobipy >= 11.0.3",
    "highspy >= 1.7.2",
    "matplotlib >= 3.7.1",
    "networkx >= 3.1.0",
    "numpy >= 2.2.0",
    "pandas >= 2.1.1",
    "scipy >= 1.11.3",
    "scikit-learn >= 1.5.2",
    "statsmodels >= 0.14.4",
    "geopandas >= 1.0.1",
    "contextily >= 1.6.2",
    "coverage[toml] >= 7.8.0",
    "flake8 >= 7.2.0",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/Critical-Infrastructure-Systems-Lab/PowNet"
Documentation = "https://pownet.readthedocs.io/en/latest/index.html"
